Updates for 0.3.106 release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.3.106
+=======
+- Only sync devices with no volume.
+- Updated translation: sk, nn.
+
 0.3.105
 =======
 - Read mount options from a rc file (bug #2891).
