Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+0.5.2
+=====
+- Some fixes in the python bindings (bug #6186, #6187 and #6188).
+- Increase exo module priority.
+- Add support for editing .directory files in exo-desktop-item-edit.
+- Add filter entry in the icon chooser dialog.
+- Add desktop files for the exo-open types.
+- Fix link problem with --no-add-needed (bug #5951).
+- Translation updates (es, kk, ca, it, sv, ru, uk, hu, bn, fi, gl,
+  ja, cs, fr, pt, pt_BR, da, eu, lv, sk, zh_CN, fr).
+
 0.5.1
 =====
 - Remove exo-mount-point API.
