Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+0.3.107
+=======
+- Make the treeview work again with gtk 2.20 (bug #6230).
+- Fix compilation error (bug #6421).
+- Build ChangeLog from GIT.
+- Translation updates (pt, nl, it, am, bn, kk, ug, ru, ja).
+
 0.3.106
 =======
 - Only sync devices with no volume.
