Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+0.5.4
+=====
+- Abort dist if xml is not valid.
+- Move files from $libexecdir to $libdir.
+- Remove deprecated encoding key from desktop files.
+- Translation updates (fi, fr, he, kk, it, uk, de, zh_TW).
+
 0.5.3
 =====
 - Drop all HAL related code. Exo-hal is not used by thunar-volman
